--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/elite-coder-5150/untitled-ui-kit-backend#readme",
   "dependencies": {
     "esm": "^3.2.25",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^6.8.4"
   }
 }
