--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   },
   "homepage": "https://github.com/elite-coder-5150/untitled-ui-kit-backend#readme",
   "dependencies": {
+    "concurrent": "^0.3.2",
     "esm": "^3.2.25",
     "express": "^4.18.2",
-    "mongoose": "^6.8.4"
+    "mongoose": "^6.8.4",
+    "nodemon": "^2.0.20"
   }
 }
